# dect-evaluation

./: .logs  DECT_modelnet_DONOTTOUCH.ipynb  LICENCE.md  Makefile  README.md  before.pt  callbacks.py  config.json  config.py  create_ect_plot.py  create_plane.py  create_theta_plot.py  deepsets.yaml  ect.npy  ect_cnn.yaml  ect_cnn_best copy.yaml  ect_cnn_best.yaml  ect_cnn_points_100.yaml  example.ipynb  generate_ect.ipynb  generate_experiments.py  logger.py  logs.py  main.py  main_best.py  myprofile.prof  notes.md  pcld.py  plot_example_ect.ipynb  plot_graph.ipynb  plot_injective.ipynb  prep_deepsets.py  pyproject.toml  recon.py  requirements.txt  results.prof  scratch.py  single_main.py  stats.prof  test-20230515-093032.logs  (+6 more)
config/: config.json  config.yaml  ect_model_base.yaml  gnn_benchmark_data_base.yaml  gnn_mnist_config.json  gnn_mnist_ectcnn_config.json  gnn_mnist_ectlinear_config.json  linear_model_base.yaml  shapenet100_ectcnn_config.yaml  shapenet100_ectcnn_thetasweep_config.yaml  shapenet100_ectlinear_config.yaml  shapenet_ect_config.json  shapenet_ectcnn_config.json  torus_vs_spheres.yaml  trainer_base.yaml
datasets/: __init__.py  base_dataset.py  config.py  custom_dataset.py  fashion_mnist.py  gnn_benchmark.py  gnn_benchmark_dataset.py  grid.pt  lrgb.py  manifold.py  mnist.py  modelnet.py  modelnet_dataset.py  modelnetmesh.py  moleculenet.py  ogb.py  orbit5k.py  sync.ply  torus_vs_shere.py  transforms.py  tu.py  tu_dataset.py  weighted_mist.py  weighted_mnist.py
dect/: __init__.py  pyproject.toml
dect/dect/: ect.py
loaders/: factory.py
(+495 files in other folders)
