[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dect"
version = "0.0.0"
dependencies = [
    "numpy",
    "torch",
    "torch_geometric"
]
requires-python = ">=3.8"
authors = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
  {name = "Bastian Rieck", email = "bastian.rieck@helmholtz-munich.de"},
]
maintainers = [
  {name = "Ernst Röell", email = "ernst.roeell@helmholtz-munich.de"},
]
description = "A fast package to compute the Euler Characteristic Transform"
readme = "README.rst"
license = {file = "LICENSE.txt"}
keywords = ["euler", "characteristic", "topology", "tda", "transform"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
